package com.lthaoshao.pattern.prototype;

/**
 * <p> 原型模式接口 </p>
 *
 * @author lijinghao
 * @version : Prototype.java, v 0.1 2019年07月26日 16:48:48 lijinghao Exp $
 */
public interface Prototype {

    /**
     * 克隆方法
     *
     * @return
     */
    Prototype clone();
}
